--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -6,6 +6,9 @@ parameters:
         # use Jackalope Doctrine DBAL
         type: doctrinedbal
         connection: default
+        caches:
+            meta: doctrine_cache.providers.phpcr_meta
+            nodes: doctrine_cache.providers.phpcr_nodes
     phpcr_workspace:   default
     phpcr_user:        admin
     phpcr_password:    admin
