--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -84,8 +84,8 @@ cmf_core:
         # basepath: /custom/basepath
     publish_workflow: false
 
-cmf_simple_cms:
-    routing:
+cmf_routing:
+    dynamic:
         templates_by_class:
             Symfony\Cmf\Bundle\SimpleCmsBundle\Doctrine\Phpcr\Page: AcmeDemoBundle:Page:index.html.twig
 
