fix travis setup

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,20 @@
 language: php
 
 php:
-  - 5.3.3
   - 5.3
   - 5.4
+  - 5.5
 
-before_script: composer install -n
+before_script:
+  - composer self-update
+  - composer install --prefer-source
+  - php app/console doctrine:database:create -e=test
+  - php app/console doctrine:phpcr:init:dbal -e=test
+  - php app/console doctrine:phpcr:workspace:create standard_test -e=test
+  - php app/console doctrine:phpcr:repository:init -e=test
 
 script: phpunit -c app
+
+notifications:
+  irc: "irc.freenode.org#symfony-cmf"
+  email: "symfony-cmf-devs@googlegroups.com"
