--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -18,21 +18,16 @@ security:
             pattern:  ^/(_(profiler|wdt)|css|images|js)/
             security: false
 
-        login:
-            pattern:  ^/demo/secured/login$
-            security: false
-
-        secured_area:
-            pattern:    ^/demo/secured/
+        main:
+            pattern: ^/
+            anonymous: ~
             form_login:
-                check_path: _security_check
                 login_path: _demo_login
+                check_path: _demo_login_check
+                default_target_path: /demo
+                always_use_default_target_path: true
             logout:
-                path:   _demo_logout
-                target: _demo
-            #anonymous: ~
-            #http_basic:
-            #    realm: "Secured Demo Area"
+                path: /demo/logout
 
     access_control:
         #- { path: ^/login, roles: IS_AUTHENTICATED_ANONYMOUSLY, requires_channel: https }
