L flag in the last RewriteRule is redundant, IIUC.

--- a/web/.htaccess
+++ b/web/.htaccess
@@ -38,7 +38,7 @@ DirectoryIndex app.php
     RewriteRule .? - [L]
 
     # Rewrite all other queries to the front controller.
-    RewriteRule .? %{ENV:BASE}/app.php [L]
+    RewriteRule .? %{ENV:BASE}/app.php
 </IfModule>
 
 <IfModule !mod_rewrite.c>
