--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 /web/bundles/
 /app/bootstrap.php.cache
+/app/check.php
+/app/SymfonyRequirements.php
 /app/cache/*
 /app/config/parameters.yml
 /app/logs/*
