--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
         "symfony/monolog-bundle": "~2.4",
         "sensio/distribution-bundle": "~3.0",
         "sensio/framework-extra-bundle": "~3.0",
-        "incenteev/composer-parameter-handler": "~2.0"
+        "incenteev/composer-parameter-handler": "~2.0",
+        "gnugat/wizard-plugin": "~1.0"
     },
     "require-dev": {
         "sensio/generator-bundle": "~2.3"
