--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -36,7 +36,8 @@ assetic:
     bundles:        [ ]
     #java: /usr/bin/java
     filters:
-        cssrewrite: ~
+        cssrewrite:
+            apply_to: '\.(css|less|sass)$'
         #closure:
         #    jar: "%kernel.root_dir%/Resources/java/compiler.jar"
         #yui_css:
