--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -14,5 +14,5 @@ parameters:
 
     locale:            en
 
-    # A secret key that's used for certain things, like generating CSRF tokens
+    # A secret key that's used to generate certain security-related tokens
     secret:            ThisTokenIsNotSoSecretChangeIt
