--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -20,3 +20,7 @@ parameters:
 
     locale:            en
     secret:            ThisTokenIsNotSoSecretChangeIt
+
+    debug_toolbar:          true
+    debug_redirects:        false
+    use_assetic_controller: true
