--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -54,6 +54,7 @@ doctrine:
         charset:  UTF8
         # if using pdo_sqlite as your database driver, add the path in parameters.yml
         # e.g. database_path: "%kernel.root_dir%/data/data.db3"
+        # and uncomment next line:
         # path:     "%database_path%"
 
     orm:
