Updated autoload standard to PSR-4 for own project bundles.
| Q             | A
| ------------- | ---
| Bug fix?      | no
| New feature?  | no
| BC breaks?    | no
| Deprecations? | no
| Tests pass?   | yes
| Doc PR        | #4255

--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,8 @@
     "type": "project",
     "description": "The \"Symfony Standard Edition\" distribution",
     "autoload": {
-        "psr-0": { "": "src/", "SymfonyStandard": "app/" }
+        "psr-0": { "SymfonyStandard": "app/" },
+        "psr-4": { "": "src/" }
     },
     "require": {
         "php": ">=5.3.3",
