Default according to Validation Documentation
See: https://github.com/symfony/symfony-docs/issues/4268
And: http://symfony.com/doc/current/book/validation.html#configuration

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -11,7 +11,7 @@ framework:
         strict_requirements: ~
     form:            ~
     csrf_protection: ~
-    validation:      { enable_annotations: true }
+    validation:      { enabled: true }
     templating:
         engines: ['twig']
         #assets_version: SomeVersionScheme
