--- a/app/config/config_dev.yml
+++ b/app/config/config_dev.yml
@@ -42,7 +42,7 @@ monolog:
         #    level:  info
 
 assetic:
-    use_controller: "%kernel.debug%"
+    use_controller: true
 
 #swiftmailer:
 #    delivery_address: me@example.com
