Wrapped the parameter name in quotes to produce a valid YAML file

--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -6,4 +6,4 @@ parameters:
 services:
 #    service_name:
 #        class: AppBundle\Directory\ClassName
-#        arguments: [@other_service_name, "plain_value", %parameter_name%]
+#        arguments: [@other_service_name, "plain_value", "%parameter_name%"]
