--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -46,15 +46,13 @@ assetic:
 doctrine:
     dbal:
         driver:   "%database_driver%"
+        host:     "%database_host%"
+        port:     "%database_port%"
+        dbname:   "%database_name%"
+        user:     "%database_user%"
+        password: "%database_password%"
         charset:  UTF8
         path:     "%database_path%"
-        # if using something else than pdo_sqlite as driver, add the
-        # parameters in parameters.yml.dist and uncomment the lines below
-        #host:     "%database_host%"
-        #port:     "%database_port%"
-        #dbname:   "%database_name%"
-        #user:     "%database_user%"
-        #password: "%database_password%"
 
 # Doctrine PHPCR-ODM configuration
 doctrine_phpcr:
