--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,13 @@
         "sensio/distribution-bundle": "2.3.*",
         "sensio/framework-extra-bundle": "2.3.*",
         "sensio/generator-bundle": "2.3.*",
-        "incenteev/composer-parameter-handler": "~2.0"
+        "incenteev/composer-parameter-handler": "~2.0",
+        "developathe/crud-bundle": "dev-master",
+        "friendsofsymfony/jsrouting-bundle": "@stable",
+        "knplabs/knp-menu-bundle": "~2.0",
+        "friendsofsymfony/user-bundle": "2.0.*@dev",
+        "gedmo/doctrine-extensions": "dev-master",
+        "stof/doctrine-extensions-bundle": "~1.1@dev"
     },
     "scripts": {
         "post-install-cmd": [
