--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
     "repositories": [
         {
             "type": "vcs",
-            "url": "git@github.com:=davdi1982=/symfony-extended.git"
+            "url": "git@github.com:=davdi1982=/symfony-extended.git",
+            "minimum-stability": "dev"
         }
     ],
     "require": {
