--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         {
             "type": "vcs",
             "url": "git@github.com:=davdi1982=/symfony-extended.git",
+            "minimum-stability": "dev"
         }
     ],
     "require": {
