--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,7 @@
     "repositories": [
         {
             "type": "vcs",
-            "url": "git@github.com:=davdi1982=/symfony-extended.git",
-            "minimum-stability": "dev"
+            "url": "git@github.com:=davdi1982=/symfony-extended.git"
         }
     ],
     "require": {
