--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     "repositories": [
         {
             "type": "vcs",
-            "url": "git@github.com:=davdi1982=/symfony-extended.git"
+            "url": "https://github.com/davdi1982/symfony-extended.git"
         }
     ],
     "require": {
