--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
     },
     "require": {
         "php": ">=5.3.3",
+        "davdi1982/symfony-extended": "~2.3",
         "doctrine/orm": "~2.2,>=2.2.3",
         "doctrine/doctrine-bundle": "1.2.*",
         "twig/extensions": "1.0.*",
