--- a/.travis.yml
+++ b/.travis.yml
@@ -7,12 +7,9 @@ php:
   - 5.6
   - hhvm
 
-matrix:
-  allow_failures:
-    - php: hhvm
-
 before_script:
   - composer self-update
+  - sh -c 'if [ "$TRAVIS_PHP_VERSION" = "hhvm" ]; then composer require --prefer-source "doctrine/dbal"="2.5.*@dev" "doctrine/doctrine-bundle"="1.3.*@dev"; fi;'
   - composer install --prefer-source
   - app/console doctrine:database:create -e=test
   - app/console doctrine:phpcr:init:dbal -e=test
