--- a/app/phpunit.xml.dist
+++ b/app/phpunit.xml.dist
@@ -29,6 +29,8 @@
                 <directory>../src/*/*Bundle/Tests</directory>
                 <directory>../src/*/Bundle/*Bundle/Resources</directory>
                 <directory>../src/*/Bundle/*Bundle/Tests</directory>
+                <directory>../src/*Bundle/Resources</directory>
+                <directory>../src/*Bundle/Tests</directory>
             </exclude>
         </whitelist>
     </filter>
