Adding security advisories pre-update check via `roave/security-advisories` meta-package

--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
         "symfony/monolog-bundle": "~2.4",
         "sensio/distribution-bundle": "~3.0,>=3.0.12",
         "sensio/framework-extra-bundle": "~3.0,>=3.0.2",
-        "incenteev/composer-parameter-handler": "~2.0"
+        "incenteev/composer-parameter-handler": "~2.0",
+        "roave/security-advisories": "dev-master"
     },
     "require-dev": {
         "sensio/generator-bundle": "~2.3"
