Move %locale% to config.yml

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -3,6 +3,9 @@ imports:
     - { resource: security.yml }
     - { resource: services.yml }
 
+parameters:
+    locale: en
+
 framework:
     #esi:             ~
     #translator:      { fallback: "%locale%" }
