Fixed composer.json syntax

--- a/composer.json
+++ b/composer.json
@@ -33,7 +33,7 @@
     },
     "require-dev": {
         "liip/functional-test-bundle": "~1.0",
-        "sensio/generator-bundle": "~2.3"
+        "sensio/generator-bundle": "~2.3",
         "sensio/distribution-bundle": "~3.0,>=3.0.12",
         "sensio/framework-extra-bundle": "~3.0",
         "incenteev/composer-parameter-handler": "~2.0"
