--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -15,7 +15,7 @@ framework:
     validation:      { enable_annotations: true }
     templating:
         engines: ['twig']
-        #assets_version: SomeVersionScheme
+    assets: ~
     default_locale:  "%locale%"
     trusted_hosts:   ~
     trusted_proxies: ~
