User services name for APC

--- a/app/config/config_prod.yml
+++ b/app/config/config_prod.yml
@@ -3,9 +3,9 @@ imports:
 
 #framework:
 #    validation:
-#        cache: apc
+#        cache: validator.mapping.cache.apc
 #    serializer:
-#        cache: apc
+#        cache: serializer.mapping.cache.apc
 
 #doctrine:
 #    orm:
