Changed comment, removed %database_driver%

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -51,7 +51,7 @@ assetic:
 # Doctrine Configuration
 doctrine:
     dbal:
-        driver:   "%database_driver%"
+        driver:   pdo_mysql
         host:     "%database_host%"
         port:     "%database_port%"
         dbname:   "%database_name%"
