--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -1,8 +1,7 @@
 # This file is a "template" of what your parameters.yml file should look like
-# Set parameters here that may be different on each machine where the app is deployed
+# Set parameters here that may be different on each deployment target of the app, e.g. development, staging, production.
 # http://symfony.com/doc/current/best_practices/configuration.html#infrastructure-related-configuration
 parameters:
-    database_driver:   pdo_mysql
     database_host:     127.0.0.1
     database_port:     ~
     database_name:     symfony
