[config] add ide parameter.

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -29,6 +29,7 @@ framework:
         handler_id:  ~
     fragments:       ~
     http_method_override: true
+    ide: "%ide%"
 
 # Twig Configuration
 twig:
