Added in memory admin user

--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -1,7 +1,10 @@
 security:
+    encoders:
+        Symfony\Component\Security\Core\User\User: plaintext
     providers:
         in_memory:
-            memory: ~
+            memory:
+              users: %users%
 
     firewalls:
         dev:
