Register security routing in security config

--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -13,3 +13,9 @@ security:
 
         default:
             anonymous: ~
+            logout:
+                path:   /demo/logout
+                target: /
+            form_login:
+                login_path: /demo/login
+                check_path: /demo/login_check
