--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
     "autoload": {
         "psr-0": { "": "src/", "SymfonyStandard": "app/" }
     },
-    "minimum-stability": "stable",
+    "minimum-stability": "dev",
     "require": {
         "php": ">=5.3.9",
         "symfony/symfony": "~2.6",
@@ -27,8 +27,8 @@
         "symfony/assetic-bundle": "~2.3",
         "symfony/swiftmailer-bundle": "~2.3",
         "symfony/monolog-bundle": "~2.4",
-        "symfony-cmf/symfony-cmf": "1.2.*",
-        "symfony-cmf/simple-cms-bundle": "1.2.*",
+        "symfony-cmf/symfony-cmf": "1.3.*",
+        "symfony-cmf/simple-cms-bundle": "1.3.*",
         "symfony-cmf/create-bundle": "1.2.*",
         "jackalope/jackalope-doctrine-dbal": "1.1.*",
         "nelmio/alice": "~1.0"
