Fix typo in phpunit file, remove gitkeep in tests

--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -9,7 +9,7 @@
 >
     <testsuites>
         <testsuite name="Project Test Suite">
-            <directory>tests/*</directory>
+            <directory>tests</directory>
         </testsuite>
     </testsuites>
 
