--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -19,9 +19,8 @@ framework:
     csrf_protection: ~
     validation:      { enable_annotations: true }
     #serializer:      { enable_annotations: true }
-    templating:
-        engines: ['twig']
-        #assets_version: SomeVersionScheme
+    #templating:
+        #engines: ['php', 'twig']
     default_locale:  "%locale%"
     trusted_hosts:   ~
     trusted_proxies: ~
