--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,12 @@
-/web/bundles/
-/app/bootstrap.php.cache
-/app/cache/*
-/app/config/parameters.yml
-/app/logs/*
+#/web/bundles/
+#/app/bootstrap.php.cache
+#/app/cache/*
+#/app/config/parameters.yml
+#/app/logs/*
 !app/cache/.gitkeep
 !app/logs/.gitkeep
-/app/phpunit.xml
-/build/
-/vendor/
-/bin/
-/composer.phar
+#/app/phpunit.xml
+#/build/
+#/vendor/
+#/bin/
+#/composer.phar
