Moved demo users to dev config

--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -1,10 +1,7 @@
 security:
-    encoders:
-        Symfony\Component\Security\Core\User\User: plaintext
     providers:
         in_memory:
-            memory:
-              users: %users%
+            memory: ~
 
     firewalls:
         dev:
