--- a/app/config/config_dev.yml
+++ b/app/config/config_dev.yml
@@ -7,6 +7,14 @@ framework:
         strict_requirements: true
     profiler: { only_exceptions: false }
 
+security:
+    encoders:
+        Symfony\Component\Security\Core\User\User: plaintext
+    providers:
+        in_memory:
+            memory:
+              users: %users%
+
 web_profiler:
     toolbar: "%debug_toolbar%"
     intercept_redirects: "%debug_redirects%"
