Used admin password for admin user

--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -44,5 +44,5 @@ parameters:
     use_assetic_controller: true
     users:
         admin:
-            password: 111111
+            password: admin
             roles: ROLE_SUPER_ADMIN
