Added comment for not secure encoder

--- a/app/config/config_dev.yml
+++ b/app/config/config_dev.yml
@@ -9,6 +9,7 @@ framework:
 
 security:
     encoders:
+        # Don't use it in production
         Symfony\Component\Security\Core\User\User: plaintext
     providers:
         in_memory:
