--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,6 @@ php:
   - 5.3
   - 5.4
   - 5.5
-  - 5.6
   - 7.0
   - hhvm
 
@@ -14,11 +13,21 @@ cache:
   directories:
     - $HOME/.composer/cache
 
-before_script:
+matrix:
+  finish_fast: true
+  include:
+    - php: 5.6
+      env: COMPOSER=install
+
+before_install:
+  - if [[ "$TRAVIS_PHP_VERSION" != "hhvm" ]]; then echo "memory_limit = -1" >> ~/.phpenv/versions/$(phpenv version-name)/etc/conf.d/travis.ini; fi
+  - phpenv config-rm xdebug.ini || true
   - composer self-update
-  - composer install --prefer-dist
-  - app/console doctrine:database:create -e=test
-  - app/console doctrine:phpcr:init:dbal -e=test
+
+install: if [ "$COMPOSER" = "install" ]; then composer install --prefer-dist; else composer update --prefer-dist; fi
+
+before_script:
+  - app/console doctrine:phpcr:init:dbal --force -e=test
   - app/console doctrine:phpcr:workspace:create standard_test -e=test
   - app/console doctrine:phpcr:repository:init -e=test
 
