--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "psr-0": { "": "src/", "SymfonyStandard": "app/" }
     },
     "minimum-stability": "dev",
+    "prefer-stable": true,
     "require": {
         "php": "^5.3.9|^7.0",
         "symfony/symfony": "~2.6",
