--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
     },
     "minimum-stability": "dev",
     "require": {
-        "php": ">=5.3.9",
+        "php": "^5.3.9|^7.0",
         "symfony/symfony": "~2.6",
         "symfony/symfony": "2.6.*",
         "doctrine/orm": "~2.2,>=2.2.3,<2.5",
