--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -25,6 +25,8 @@ framework:
     default_locale:  "%locale%"
     trusted_hosts:   ~
     trusted_proxies: ~
+    serializer: true
+    
     session:
         # handler_id set to null will use default session handler from php.ini
         handler_id:  ~
