update config.yml with serializer: true
solving this issue

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -24,6 +24,7 @@ framework:
         handler_id:  ~
     fragments:       ~
     http_method_override: true
+    serializer: true
 
 # Twig Configuration
 twig:
