--- a/.travis.yml
+++ b/.travis.yml
@@ -17,14 +17,14 @@ matrix:
   finish_fast: true
   include:
     - php: 5.6
-      env: COMPOSER=install
+      env: COMPOSER_CMD=install
 
 before_install:
   - if [[ "$TRAVIS_PHP_VERSION" != "hhvm" ]]; then echo "memory_limit = -1" >> ~/.phpenv/versions/$(phpenv version-name)/etc/conf.d/travis.ini; fi
   - phpenv config-rm xdebug.ini || true
   - composer self-update
 
-install: if [ "$COMPOSER" = "install" ]; then composer install --prefer-dist; else composer update --prefer-dist; fi
+install: if [ "$COMPOSER_CMD" = "install" ]; then composer install --prefer-dist; else composer update --prefer-dist; fi
 
 before_script:
   - app/console doctrine:phpcr:init:dbal --force -e=test
