--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -10,19 +10,21 @@ parameters:
 
 framework:
     #esi:             ~
-    #translator:      { fallbacks: ["%locale%"] }
-    secret:          "%secret%"
+    #translator:      { fallbacks: ['%locale%'] }
+    secret:          '%secret%'
     router:
-        resource: "%kernel.root_dir%/config/routing.yml"
+        resource: '%kernel.root_dir%/config/routing.yml'
         strict_requirements: ~
     form:            ~
     csrf_protection: ~
     validation:      { enable_annotations: true }
-    #serializer:      { enable_annotations: true }
+    serializer:
+        enabled: true
+        #enable_annotations: true
     templating:
         engines: ['twig']
         #assets_version: SomeVersionScheme
-    default_locale:  "%locale%"
+    default_locale:  '%locale%'
     trusted_hosts:   ~
     trusted_proxies: ~
     session:
@@ -30,48 +32,47 @@ framework:
         handler_id:  ~
     fragments:       ~
     http_method_override: true
-    serializer: true
 
 # Twig Configuration
 twig:
-    debug:            "%kernel.debug%"
-    strict_variables: "%kernel.debug%"
+    debug:            '%kernel.debug%'
+    strict_variables: '%kernel.debug%'
 
 # Assetic Configuration
 assetic:
-    debug:          "%kernel.debug%"
+    debug:          '%kernel.debug%'
     use_controller: false
     bundles:        [CmfCreateBundle]
     #java: /usr/bin/java
     filters:
         cssrewrite: ~
         #closure:
-        #    jar: "%kernel.root_dir%/Resources/java/compiler.jar"
+        #    jar: '%kernel.root_dir%/Resources/java/compiler.jar'
         #yui_css:
-        #    jar: "%kernel.root_dir%/Resources/java/yuicompressor-2.4.7.jar"
+        #    jar: '%kernel.root_dir%/Resources/java/yuicompressor-2.4.7.jar'
 
 # Doctrine Configuration (needed for Jackalope Doctrine DBAL)
 doctrine:
     dbal:
         driver:   pdo_sqlite
-        host:     "%database_host%"
-        port:     "%database_port%"
-        dbname:   "%database_name%"
-        user:     "%database_user%"
-        password: "%database_password%"
+        host:     '%database_host%'
+        port:     '%database_port%'
+        dbname:   '%database_name%'
+        user:     '%database_user%'
+        password: '%database_password%'
         charset:  UTF8
-        path:     "%database_path%"
+        path:     '%database_path%'
 
 # Doctrine PHPCR-ODM configuration
 doctrine_phpcr:
     session:
-        backend: "%phpcr_backend%"
-        workspace: "%phpcr_workspace%"
-        username: "%phpcr_user%"
-        password: "%phpcr_password%"
+        backend:   '%phpcr_backend%'
+        workspace: '%phpcr_workspace%'
+        username:  '%phpcr_user%'
+        password:  '%phpcr_password%'
     odm:
         auto_mapping: true
-        auto_generate_proxy_classes: "%kernel.debug%"
+        auto_generate_proxy_classes: '%kernel.debug%'
 
 # Jackalope Metadata and Node Cache services
 doctrine_cache:
@@ -93,7 +94,7 @@ cmf_core:
 cmf_routing:
     dynamic:
         templates_by_class:
-            Symfony\Cmf\Bundle\SimpleCmsBundle\Doctrine\Phpcr\Page: AcmeDemoBundle:Page:index.html.twig
+            Symfony\Cmf\Bundle\SimpleCmsBundle\Doctrine\Phpcr\Page: 'AcmeDemoBundle:Page:index.html.twig'
 
 # Menu Configuration
 knp_menu:
@@ -110,8 +111,8 @@ fos_rest:
 
 # Swiftmailer Configuration
 swiftmailer:
-    transport: "%mailer_transport%"
-    host:      "%mailer_host%"
-    username:  "%mailer_user%"
-    password:  "%mailer_password%"
+    transport: '%mailer_transport%'
+    host:      '%mailer_host%'
+    username:  '%mailer_user%'
+    password:  '%mailer_password%'
     spool:     { type: memory }
