--- a/app/config/config_prod.yml
+++ b/app/config/config_prod.yml
@@ -21,5 +21,5 @@ monolog:
             handler:      nested
         nested:
             type:  stream
-            path:  "%kernel.logs_dir%/%kernel.environment%.log"
+            path:  '%kernel.logs_dir%/%kernel.environment%.log'
             level: debug
