--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -1,4 +1,4 @@
-# This file is a "template" of what your parameters.yml file should look like
+# This file is a 'template' of what your parameters.yml file should look like
 # Set parameters here that may be different on each deployment target of the app, e.g. development, staging, production.
 # http://symfony.com/doc/current/best_practices/configuration.html#infrastructure-related-configuration
 parameters:
@@ -7,7 +7,7 @@ parameters:
     database_name:     ~
     database_user:     ~
     database_password: ~
-    database_path:     "%kernel.root_dir%/app.sqlite"
+    database_path:     '%kernel.root_dir%/app.sqlite'
 
     phpcr_backend:
         # if you're using Jackalope Doctrine DBAL
@@ -41,7 +41,3 @@ parameters:
     debug_toolbar:          true
     debug_redirects:        false
     use_assetic_controller: true
-    users:
-        admin:
-            password: admin
-            roles: ROLE_SUPER_ADMIN
