--- a/composer.json
+++ b/composer.json
@@ -14,8 +14,7 @@
         "psr-4": { "": "src/" },
         "classmap": [ "app/AppKernel.php", "app/AppCache.php" ]
     },
-    "minimum-stability": "dev",
-    "prefer-stable": true,
+    "minimum-stability": "RC",
     "require": {
         "php": "^5.3.9|^7.0",
         "symfony/symfony": "~2.8",
@@ -31,7 +30,7 @@
         "symfony-cmf/symfony-cmf": "1.3.*",
         "symfony-cmf/simple-cms-bundle": "1.3.*",
         "symfony-cmf/create-bundle": "1.2.*",
-        "jackalope/jackalope-doctrine-dbal": "1.1.*",
+        "jackalope/jackalope-doctrine-dbal": "~1.1",
         "nelmio/alice": "~1.0"
     },
     "require-dev": {
