Do security:check after installing or upgrading
Compared to [adding the `roave/security-advisories` meta-package](https://github.com/symfony/symfony-standard/pull/760):

* It's output is much nicer
* It runs on any install, not just update, so you are more likely to
  get the warning earlier
* It's just a warning - it doesn't block you carrying on with
  upgrading / installing other things

I had a situation where a not-very-critical security error meant that
roave blocked me upgrading other packages, some of which had more
important issues to think about.

--- a/composer.json
+++ b/composer.json
@@ -33,7 +33,8 @@
             "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::clearCache",
             "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::installAssets",
             "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::installRequirementsFile",
-            "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::prepareDeploymentTarget"
+            "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::prepareDeploymentTarget",
+            "app/console security:check -q || app/console security:check --ansi || true"
         ],
         "post-update-cmd": [
             "Incenteev\\ParameterHandler\\ScriptHandler::buildParameters",
@@ -41,7 +42,8 @@
             "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::clearCache",
             "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::installAssets",
             "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::installRequirementsFile",
-            "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::prepareDeploymentTarget"
+            "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::prepareDeploymentTarget",
+            "app/console security:check -q || app/console security:check --ansi || true"
         ]
     },
     "config": {
