issue-18160 : reproducing cases /app.php/casA (cas OK) , /app.php/casB (cas KO)

--- a/app/config/config_prod.yml
+++ b/app/config/config_prod.yml
@@ -1,9 +1,9 @@
 imports:
     - { resource: config.yml }
 
-#framework:
-#    validation:
-#        cache: apc
+framework:
+    esi: true
+    fragments: {path: /_proxy}
 
 #doctrine:
 #    orm:
