--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -26,15 +26,11 @@ security:
             security: false
 
         main:
+            anonymous: ~
             # activate different ways to authenticate
 
-            anonymous: ~
+            # http_basic: ~
+            # http://symfony.com/doc/current/book/security.html#a-configuring-how-your-users-will-authenticate
 
-            logout:
-                path:   /demo/logout
-                target: /
-
+            # form_login: ~
             # http://symfony.com/doc/current/cookbook/security/form_login_setup.html
-            form_login:
-                login_path: /demo/login
-                check_path: /demo/login_check
