--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,8 @@
 language: php
 
 php:
-  - 5.3
-  - 5.4
   - 5.5
-  - 7.0
+  - 5.6
   - hhvm
 
 sudo: false
@@ -20,7 +18,7 @@ env:
 matrix:
   finish_fast: true
   include:
-    - php: 5.6
+    - php: 7.0
       env: COMPOSER_CMD=install
 
 before_install:
@@ -31,10 +29,10 @@ before_install:
 install: if [ "$COMPOSER_CMD" = "install" ]; then composer install --prefer-dist; else composer update --prefer-dist; fi
 
 before_script:
-  - app/console doctrine:phpcr:init:dbal --force -e=test
-  - app/console doctrine:phpcr:repository:init -e=test
+  - bin/console doctrine:phpcr:init:dbal --force -e=test
+  - bin/console doctrine:phpcr:repository:init -e=test
 
-script: phpunit -c app
+script: phpunit
 
 notifications:
   irc: "irc.freenode.org#symfony-cmf"
