--- a/app/config/config_dev.yml
+++ b/app/config/config_dev.yml
@@ -5,6 +5,8 @@ framework:
     router:
         resource: "%kernel.root_dir%/config/routing_dev.yml"
         strict_requirements: true
+    session:
+        handler_id:  ~
     profiler: { only_exceptions: false }
 
 web_profiler:
