Change the default directory structure and register ActionBundle.
Update dependencies

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -60,6 +60,13 @@ doctrine:
         auto_generate_proxy_classes: "%kernel.debug%"
         naming_strategy: doctrine.orm.naming_strategy.underscore
         auto_mapping: true
+        mappings:
+            App:
+                type:      annotation
+                is_bundle: false
+                dir:       '%kernel.root_dir%/../src/Entity'
+                prefix:    'Entity'
+                alias:     App
 
 # Swiftmailer Configuration
 swiftmailer:
