--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -4,6 +4,5 @@ parameters:
 #    parameter_name: value
 
 services:
-#    service_name:
-#        class: AppBundle\Directory\ClassName
+#    'My\ClassName':
 #        arguments: ["@another_service_name", "plain_value", "%parameter_name%"]
